load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

# gazelle:prefix github.com/mjm/pi-tools
gazelle(name = "gazelle")

k8s_objects(
    name = "k8s",
    objects = [
        "//auth/oauth-proxy:k8s",
        "//detect-presence/cmd/detect-presence-srv:k8s",
        "//go-links/cmd/go-links:k8s",
        "//homebase:k8s",
        "//monitoring/alertmanager:k8s",
        "//monitoring/grafana:k8s",
        "//monitoring/loki:k8s",
        "//monitoring/jaeger:k8s_operator",
        "//monitoring/jaeger:k8s",
        "//monitoring/node_exporter:k8s_daemon",
        "//monitoring/prometheus:k8s",
        "//monitoring/promtail:k8s",
        "//pi-hole:k8s",
        "//security/cert-manager:k8s",
        "//storage/postgresql:k8s",
    ],
    tags = ["manual"],
)

k8s_objects(
    name = "k8s_crds",
    objects = [
        "//monitoring/jaeger:k8s_operator_crd",
        "//security/cert-manager:k8s_crds",
    ],
    tags = ["manual"],
)
