load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "apps",
    srcs = ["apps.go"],
    importpath = "github.com/mjm/pi-tools/apps",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/backup",
        "//apps/blackboxexporter",
        "//apps/blocky",
        "//apps/consulexporter",
        "//apps/grafana",
        "//apps/ingress",
        "//apps/loki",
        "//apps/otel",
        "//apps/presence",
        "//apps/promtail",
        "//apps/unifiexporter",
        "//pkg/nomadic",
    ],
)
