load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "apps",
    srcs = ["apps.go"],
    importpath = "github.com/mjm/pi-tools/apps",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/adminer",
        "//apps/backup",
        "//apps/blackboxexporter",
        "//apps/blocky",
        "//apps/consulexporter",
        "//apps/deploy",
        "//apps/grafana",
        "//apps/ingress",
        "//apps/loki",
        "//apps/nodeexporter",
        "//apps/nut",
        "//apps/otel",
        "//apps/presence",
        "//apps/promtail",
        "//apps/pushgateway",
        "//apps/unifiexporter",
        "//apps/vaultproxy",
        "//pkg/nomadic",
    ],
)
