load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

container_image(
    name = "dump-secrets-image",
    base = "@kubectl//image",
    files = ["dump-secrets.sh"],
    mode = "0755",
    visibility = ["//visibility:public"],
)

k8s_objects(
    name = "k8s",
    objects = [
        "//backup/borg:k8s",
        "//backup/tarsnap:k8s",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
