load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "image",
    base = "@backup//image",
    directory = "/usr/bin",
    files = [
        "//backup/cmd/perform-backup",
        "@ht_sr_git_apreiml_prunef//:prunef",
    ],
    mode = "0755",
    tags = ["no-cache"],
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "mmoriarity/perform-backup",
)
