load("@io_bazel_rules_docker//container:container.bzl", "container_layer", "container_image", "container_push")

# All of these build rules expect that `yarn build` was run outside of Bazel before hand.
# Importantly, the node_modules and .next directories should be populated.

filegroup(
    name = "config",
    srcs = [
        "package.json",
        "next.config.js",
    ],
)

filegroup(
    name = "public",
    srcs = glob(["public/**/*"]),
)

filegroup(
    name = ".next",
    srcs = glob([".next/**/*"]),
)

filegroup(
    name = "node_modules",
    srcs = glob(["node_modules/**/*"]),
)

container_layer(
    name = "deps",
    data_path = ".",
    directory = "app",
    files = glob(["node_modules/**/*"]),
)

container_image(
    name = "image",
    base = "@node//image",
    layers = [":deps"],
    data_path = ".",
    directory = "app",
    files = glob([
        ".next/**/*",
        "public/**/*",
    ]) + [":config"],
    workdir = "/app",
    cmd = ["/app/node_modules/next/dist/bin/next", "start"]
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "mmoriarity/homebase-srv-next",
)
