load("@npm_homebase//@bazel/typescript:index.bzl", "ts_library")
load("@npm_homebase//@bazel/rollup:index.bzl", "rollup_bundle")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

exports_files(
    [
        "schema.graphql",
        "tsconfig.json",
    ],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "homebase",
    srcs = [
        "App.tsx",
        "index.tsx",
        "routes.ts",
    ],
    tsconfig = "//homebase:tsconfig.json",
    deps = [
        "//homebase/backups/components",
        "//homebase/components",
        "//homebase/go-links/components",
        "//homebase/homepage/components",
        "//homebase/lib",
        "//homebase/trips/components",
        "@npm_homebase//:node_modules",
    ],
)

rollup_bundle(
    name = "bundle",
    config_file = "rollup.config.js",
    entry_point = "index.tsx",
    format = "umd",
    link_workspace_root = True,
    output_dir = True,
    deps = [
        ":homebase",
        "//homebase/styles",
        "@npm_homebase//:node_modules",
    ],
)

sh_library(
    name = "server_lib",
    data = [
        "homebase-dev.caddy",
        ":bundle",
    ],
)

sh_binary(
    name = "server",
    srcs = ["caddy-dev.sh"],
    data = [
        ":server_lib",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

pkg_tar(
    name = "pkg",
    srcs = [
        ":bundle",
    ],
    mode = "0644",
    package_dir = "./homebase",
    strip_prefix = "./bundle",
)

container_image(
    name = "image",
    base = "@caddy//image",
    files = [
        "homebase.caddy",
    ],
    tags = ["no-cache"],
    tars = [
        ":pkg",
    ],
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "mmoriarity/homebase-srv",
)
