load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer", "container_push")

exports_files([
    "schema.graphql",
])

# All of these build rules expect that `yarn build` was run outside of Bazel before hand.
# Importantly, the node_modules and .next directories should be populated.

filegroup(
    name = "config",
    srcs = [
        "next.config.js",
        "package.json",
    ],
)

filegroup(
    name = "public",
    srcs = glob(["public/**/*"]),
)

filegroup(
    name = ".next",
    srcs = glob([".next/**/*"]),
)

filegroup(
    name = "node_modules",
    srcs = glob(["node_modules/**/*"]),
)

container_layer(
    name = "deps",
    data_path = ".",
    directory = "app",
    files = glob(["node_modules/**/*"]),
)

container_image(
    name = "image",
    base = "@node//image",
    cmd = [
        "/app/node_modules/next/dist/bin/next",
        "start",
    ],
    data_path = ".",
    directory = "app",
    files = glob([
        ".next/**/*",
        "public/**/*",
    ]) + [":config"],
    layers = [":deps"],
    workdir = "/app",
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "mmoriarity/homebase-srv",
)
