load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

container_image(
    name = "proxy-image",
    base = "@haproxy//image",
    directory = "/usr/local/etc/haproxy",
    files = [
        "haproxy.cfg",
    ],
    tags = ["no-cache"],
)

k8s_object(
    name = "k8s_proxy_ds",
    images = {
        "index.docker.io/mmoriarity/ingress-proxy:latest": ":proxy-image",
    },
    template = "proxy-daemonset.yaml",
)

k8s_object(
    name = "k8s_ingress_ds",
    template = "ingress-daemonset.yaml",
)

k8s_object(
    name = "k8s_ingress_service",
    template = "ingress-service.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":k8s_proxy_ds",
        ":k8s_ingress_ds",
        ":k8s_ingress_service",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
