load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "k8s",
    objects = [
        "//monitoring/alertmanager:k8s",
        "//monitoring/blackbox_exporter:k8s",
        "//monitoring/cmd/tripplite_exporter:k8s",
        "//monitoring/grafana:k8s",
        "//monitoring/loki:k8s",
        "//monitoring/jaeger:k8s_operator",
        "//monitoring/jaeger:k8s",
        "//monitoring/kubernetes-dashboard:k8s",
        "//monitoring/node_exporter:k8s",
        "//monitoring/prometheus:k8s",
        "//monitoring/promtail:k8s",
        "//monitoring/unifi_exporter:k8s",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
