load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "observability",
    srcs = [
        "observability.go",
        "sampler.go",
    ],
    importpath = "github.com/mjm/pi-tools/observability",
    visibility = ["//visibility:public"],
    deps = [
        "//debug",
        "@io_opentelemetry_go_contrib_instrumentation_runtime//:runtime",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv",
        "@io_opentelemetry_go_otel_exporters_metric_prometheus//:prometheus",
        "@io_opentelemetry_go_otel_exporters_otlp//:otlp",
        "@io_opentelemetry_go_otel_exporters_otlp//otlpgrpc",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)
