load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "observability",
    srcs = [
        "observability.go",
        "sampler.go",
    ],
    importpath = "github.com/mjm/pi-tools/observability",
    visibility = ["//visibility:public"],
    deps = [
        "//debug",
        "@io_opentelemetry_go_contrib_instrumentation_runtime//:runtime",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_exporters_prometheus//:prometheus",
        "@io_opentelemetry_go_otel_metric//global",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_export_metric//:metric",
        "@io_opentelemetry_go_otel_sdk_metric//aggregator/histogram",
        "@io_opentelemetry_go_otel_sdk_metric//controller/basic",
        "@io_opentelemetry_go_otel_sdk_metric//processor/basic",
        "@io_opentelemetry_go_otel_sdk_metric//selector/simple",
    ],
)
