load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_object(
    name = "k8s_service",
    kind = "service",
    template = "service.yaml",
)

k8s_object(
    name = "k8s_ingress",
    kind = "ingress",
    template = "ingress.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":k8s_service",
        ":k8s_ingress",
    ],
    visibility = ["//visibility:public"],
)
