load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_object(
    name = "k8s_deploy",
    images = {
        "index.docker.io/mmoriarity/pi-hole-ingress-controller:latest": "//pi-hole/cmd/pi-hole-ingress-controller:image",
    },
    kind = "deployment",
    template = "deployment.yaml",
)

k8s_object(
    name = "k8s_controller_config",
    template = "configmap.yaml",
)

k8s_object(
    name = "k8s_storage",
    kind = "persistentvolumeclaim",
    template = "storage.yaml",
)

k8s_object(
    name = "k8s_service",
    kind = "service",
    template = "service.yaml",
)

k8s_object(
    name = "k8s_ingress",
    kind = "ingress",
    template = "ingress.yaml",
)

k8s_object(
    name = "k8s_exporter_deploy",
    kind = "deployment",
    template = "exporter-deployment.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":k8s_deploy",
        ":k8s_controller_config",
        ":k8s_storage",
        ":k8s_service",
        ":k8s_ingress",
        ":k8s_exporter_deploy",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
