load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rpc",
    srcs = [
        "dial.go",
        "handler.go",
    ],
    importpath = "github.com/mjm/pi-tools/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//debug",
        "@com_github_improbable_eng_grpc_web//go/grpcweb",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_test(
    name = "rpc_test",
    srcs = [
        "dial_test.go",
        "handler_test.go",
    ],
    embed = [":rpc"],
    deps = [
        "//detect-presence/proto/trips",
        "//pkg/signal",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
