load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "db.go",
        "healthcheck.go",
    ],
    importpath = "github.com/mjm/pi-tools/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/instrumentation/otelsql",
        "//pkg/migrate/postgres",
        "@com_github_etherlabsio_healthcheck//:healthcheck",
        "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
    ],
)

go_test(
    name = "storage_test",
    srcs = ["db_test.go"],
    deps = [
        ":storage",
        "//detect-presence/database",
        "//detect-presence/database/migrate",
    ],
)
