load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backup",
    srcs = [
        "backup_app.go",
        "borg.go",
        "databases.go",
        "tarsnap.go",
        "templates.go",
    ],
    embedsrcs = [
        "borg.hcl",
        "tarsnap.hcl",
        "prune.sh",
    ],
    importpath = "github.com/mjm/pi-tools/apps/backup",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
