load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "blocky",
    srcs = ["blocky_app.go"],
    embedsrcs = ["config.yaml"],
    importpath = "github.com/mjm/pi-tools/apps/blocky",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
