load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "deploy",
    srcs = [
        "deploy_app.go",
        "templates.go",
    ],
    embedsrcs = ["deploy.hcl"],
    importpath = "github.com/mjm/pi-tools/apps/deploy",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
