load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "golinks",
    srcs = ["go_links_app.go"],
    embedsrcs = ["go-links.hcl"],
    importpath = "github.com/mjm/pi-tools/apps/golinks",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
