load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grafana",
    srcs = [
        "grafana_app.go",
        "templates.go",
    ],
    embedsrcs = [
        "grafana.ini",
        "datasources.yaml",
        "dashboards.yaml",
        "grafana.hcl",
    ],
    importpath = "github.com/mjm/pi-tools/apps/grafana",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/grafana/dashboards",
        "//pkg/nomadic",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
