load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "homebase",
    srcs = [
        "homebase_api.go",
        "homebase_app.go",
        "homebase_bot.go",
        "homebase_web.go",
    ],
    embedsrcs = ["homebase-bot.hcl"],
    importpath = "github.com/mjm/pi-tools/apps/homebase",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
