load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ingress",
    srcs = ["ingress_app.go"],
    embedsrcs = [
        "load-balancer.conf",
        "ingress.hcl",
    ],
    importpath = "github.com/mjm/pi-tools/apps/ingress",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
