load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "loki",
    srcs = ["loki_app.go"],
    embedsrcs = [
        "loki.yml",
        "loki.hcl",
    ],
    importpath = "github.com/mjm/pi-tools/apps/loki",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
