load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "otel",
    srcs = ["otel_app.go"],
    embedsrcs = [
        "otel-collector-config.yaml",
        "otel-collector.hcl",
    ],
    importpath = "github.com/mjm/pi-tools/apps/otel",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
