load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "promtail",
    srcs = ["promtail_app.go"],
    embedsrcs = ["promtail.yml"],
    importpath = "github.com/mjm/pi-tools/apps/promtail",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
