load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "vaultproxy",
    srcs = ["vault_proxy_app.go"],
    embedsrcs = ["vault-proxy.hcl"],
    importpath = "github.com/mjm/pi-tools/apps/vaultproxy",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/nomadic",
        "@com_github_hashicorp_consul_api//:api",
        "@com_github_hashicorp_nomad_api//:api",
    ],
)
