load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("//tools:k8s.bzl", "k8s_http_service", "k8s_virtual_host")

k8s_object(
    name = "k8s_deploy",
    template = "deployment.yaml",
)

k8s_http_service(
    name = "k8s_http_service",
    namespace = "auth",
    service_name = "oauth2-proxy",
)

k8s_object(
    name = "k8s_ingress",
    template = "ingress.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":k8s_deploy",
        ":k8s_http_service",
        ":k8s_ingress",
    ],
)
