load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "borgbackup",
    srcs = [
        "archive.go",
        "borg.go",
        "trace.go",
    ],
    importpath = "github.com/mjm/pi-tools/backup/borgbackup",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/spanerr",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
