load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "k8s",
    images = {
        "index.docker.io/mmoriarity/prometheus-backup:latest": "//backup/cmd/prometheus-backup:image",
        "index.docker.io/mmoriarity/dump-secrets:latest": "//backup:dump-secrets-image",
    },
    template = "cronjob.yaml",
    visibility = ["//visibility:public"],
)
