load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tarsnap",
    srcs = [
        "archive.go",
        "tarsnap.go",
        "trace.go",
    ],
    importpath = "github.com/mjm/pi-tools/backup/tarsnap",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/spanerr",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
